--- a/package.json
+++ b/package.json
@@ -59,26 +59,26 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
-    "@eslint/js": "^9.27.0",
+    "@eslint/js": "^9.28.0",
+    "@tailwindcss/postcss": "^4.1.8",
     "@types/cors": "^2.8.18",
     "@types/crypto-js": "^4.2.2",
-    "@types/node": "22.15.24",
+    "@types/node": "22.15.29",
     "@types/react": "18.3.18",
     "@types/react-copy-to-clipboard": "^5.0.7",
     "@types/react-dom": "^18.3.5",
     "@types/react-syntax-highlighter": "^15.5.13",
-    "autoprefixer": "^10.4.21",
-    "eslint": "9.27.0",
-    "eslint-config-next": "15.3.2",
+    "eslint": "9.28.0",
+    "eslint-config-next": "15.3.3",
     "eslint-config-prettier": "^10.1.5",
     "i18next": "^25.2.1",
     "i18next-parser": "^9.3.0",
-    "next": "^15.3.2",
+    "next": "^15.3.3",
     "next-i18next": "^15.4.2",
     "postcss": "^8.5.4",
     "prettier": "^3.5.3",
-    "prettier-plugin-tailwindcss": "^0.6.11",
-    "tailwindcss": "^3.4.17",
+    "prettier-plugin-tailwindcss": "^0.6.12",
+    "tailwindcss": "^4.1.8",
     "typescript": "5.8.3"
   },
   "prettier": {
@@ -94,6 +94,7 @@
       "postcss@<8.4.49": ">=8.4.49"
     },
     "onlyBuiltDependencies": [
+      "@tailwindcss/oxide",
       "core-js",
       "es5-ext",
       "esbuild",
