--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "onedrive-vercel-index",
-  "version": "3.0",
+  "version": "6.0",
   "private": true,
-  "packageManager": "pnpm@10.11.0",
+  "packageManager": "pnpm@10.17.0",
   "engines": {
     "node": "22.x"
   },
@@ -15,71 +15,71 @@
     "extract": "i18next"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.7.2",
-    "@fortawesome/free-brands-svg-icons": "^6.7.2",
-    "@fortawesome/free-regular-svg-icons": "^6.7.2",
-    "@fortawesome/free-solid-svg-icons": "^6.7.2",
-    "@fortawesome/react-fontawesome": "^0.2.2",
-    "@headlessui/react": "^1.7.19",
+    "@fortawesome/fontawesome-svg-core": "^7.0.1",
+    "@fortawesome/free-brands-svg-icons": "^7.0.1",
+    "@fortawesome/free-regular-svg-icons": "^7.0.1",
+    "@fortawesome/free-solid-svg-icons": "^7.0.1",
+    "@fortawesome/react-fontawesome": "^3.0.2",
+    "@headlessui/react": "^2.2.8",
     "@tailwindcss/line-clamp": "^0.4.4",
     "awesome-debounce-promise": "^2.1.0",
-    "axios": "^1.9.0",
+    "axios": "^1.12.2",
     "cors": "^2.8.5",
     "crypto-js": "^4.2.0",
     "csstype": "^3.1.3",
-    "dayjs": "^1.11.13",
-    "emoji-regex": "^10.4.0",
-    "ioredis": "^5.6.1",
+    "dayjs": "^1.11.18",
+    "emoji-regex": "^10.5.0",
+    "ioredis": "^5.7.0",
+    "js-cookie": "^3.0.5",
     "jszip": "^3.10.1",
     "mpegts.js": "^1.8.0",
     "nextjs-progressbar": "^0.0.16",
-    "node": "22.16.0",
+    "node": "22.19.0",
     "plyr-react": "^5.3.0",
     "preview-office-docs": "^1.0.2",
-    "react": "^18.3.1",
+    "react": "^19.1.1",
     "react-async-hook": "^4.0.0",
     "react-audio-player": "^0.17.0",
-    "react-cookie": "^7.2.2",
     "react-copy-to-clipboard": "^5.1.0",
-    "react-dom": "^18.3.1",
-    "react-hot-toast": "^2.5.2",
-    "react-hotkeys-hook": "^4.6.2",
-    "react-i18next": "^15.5.2",
-    "react-markdown": "^8.0.7",
+    "react-dom": "^19.1.1",
+    "react-hot-toast": "^2.6.0",
+    "react-hotkeys-hook": "^5.1.0",
+    "react-i18next": "^15.7.3",
+    "react-markdown": "^10.1.0",
     "react-reader": "^2.0.13",
-    "react-syntax-highlighter": "^15.6.1",
+    "react-syntax-highlighter": "^15.6.6",
     "react-use-system-theme": "^1.1.1",
     "rehype-katex": "^7.0.1",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.1",
     "remark-math": "^6.0.0",
-    "swr": "^2.3.3",
+    "swr": "^2.3.6",
     "use-clipboard-copy": "^0.2.0",
     "use-constant": "^2.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
-    "@eslint/js": "^9.28.0",
-    "@tailwindcss/postcss": "^4.1.8",
-    "@types/cors": "^2.8.18",
+    "@eslint/js": "^9.36.0",
+    "@tailwindcss/postcss": "4.1.13",
+    "@types/cors": "^2.8.19",
     "@types/crypto-js": "^4.2.2",
-    "@types/node": "22.15.29",
-    "@types/react": "18.3.18",
+    "@types/node": "22.18.6",
+    "@types/react": "19.1.13",
     "@types/react-copy-to-clipboard": "^5.0.7",
-    "@types/react-dom": "^18.3.5",
+    "@types/react-dom": "^19.1.9",
     "@types/react-syntax-highlighter": "^15.5.13",
-    "eslint": "9.28.0",
-    "eslint-config-next": "15.3.3",
-    "eslint-config-prettier": "^10.1.5",
-    "i18next": "^25.2.1",
+    "eslint": "9.36.0",
+    "eslint-config-next": "15.5.3",
+    "eslint-config-prettier": "^10.1.8",
+    "i18next": "^25.5.2",
     "i18next-parser": "^9.3.0",
-    "next": "^15.3.3",
+    "next": "^15.5.3",
     "next-i18next": "^15.4.2",
-    "postcss": "^8.5.4",
-    "prettier": "^3.5.3",
-    "prettier-plugin-tailwindcss": "^0.6.12",
-    "tailwindcss": "^4.1.8",
-    "typescript": "5.8.3"
+    "postcss": "8.5.6",
+    "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.6.14",
+    "tailwindcss": "4.1.13",
+    "typescript": "5.9.2"
   },
   "prettier": {
     "printWidth": 120,
@@ -91,7 +91,11 @@
     "overrides": {
       "semver@>=7.0.0 <7.6.3": ">=7.6.3",
       "zod@<=3.24.1": ">=3.24.1",
-      "postcss@<8.4.49": ">=8.4.49"
+      "postcss@<8.4.49": ">=8.4.49",
+      "rimraf@<6.0.1": ">=6.0.1",
+      "@xmldom/xmldom@<0.9.8": ">=0.9.8",
+      "react@<19.0.0": ">=19.0.0",
+      "react-dom@<19.0.0": ">=19.0.0"
     },
     "onlyBuiltDependencies": [
       "@tailwindcss/oxide",
@@ -99,7 +103,8 @@
       "es5-ext",
       "esbuild",
       "node",
-      "sharp"
+      "sharp",
+      "unrs-resolver"
     ]
   }
 }
